--- a/src/view/index.module.scss
+++ b/src/view/index.module.scss
@@ -1,9 +1,9 @@
 .headerRow {
   display: flex;
-  background-color: #F0F3F7;
+  background-color: #f0f3f7;
   height: 32px;
   border-radius: 12px 12px 0 0;
-  border-bottom: 1px solid #E0E5EB;
+  border-bottom: 1px solid #e0e5eb;
 
   div {
     align-items: center;
@@ -46,23 +46,21 @@
 .row {
   display: flex;
   height: 52px;
-  border-bottom: 1px solid #E0E5EB;
+  border-bottom: 1px solid #e0e5eb;
   font-family: Roboto, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   text-align: left;
 
-
   &:hover {
-    background: #F7F8F9;
+    background: #f7f8f9;
   }
 
   div {
     align-items: center;
     display: flex;
     padding-left: 12px;
-
   }
 
   :nth-of-type(1) {
@@ -93,20 +91,20 @@
     width: 376px;
     display: flex;
     justify-content: space-between;
-    color: #5E6674;
+    color: #5e6674;
   }
 }
 
 .tableClass {
   border-radius: 12px;
-  border: 1px solid #E0E5EB;
+  border: 1px solid #e0e5eb;
   width: 1408px;
 }
 
 .paginationButton {
   height: 32px;
   width: 32px;
-  border: 1px solid #CED5DE;
+  border: 1px solid #ced5de;
   border-radius: 6px;
   margin: 4px;
 }
@@ -129,7 +127,7 @@
   }
 
   &::-webkit-scrollbar-track {
-    background: #F2F2F2;
+    background: #f2f2f2;
   }
 }
 
@@ -137,7 +135,7 @@
   display: flex;
   justify-content: end;
   align-items: center;
-  border-top: 1px solid #E0E5EB;
+  border-top: 1px solid #e0e5eb;
   padding-right: 10px;
   height: 48px;
 }
@@ -147,22 +145,22 @@
   height: 16px !important;
   padding: 10px 12px 10px 12px;
   border-radius: 8px;
-  background: #FEE3E3;
+  background: #fee3e3;
   cursor: pointer;
   margin-right: 20px;
 
   svg {
     path {
-      fill: #C53030;
+      fill: #c53030;
     }
   }
 
   :hover {
-    background: #FED7D7;
+    background: #fed7d7;
 
     svg {
       path {
-        fill: #9B2C2C;
+        fill: #9b2c2c;
       }
     }
   }
